# ztfin2p3

./: dependencies.txt  pyproject.toml  setup.py
tests/: test_pipe.py
ztfin2p3/: __init__.py  __main__.py  aperture.py  builder.py  catalog.py  io.py  metadata.py  science.py  startable.py  ubercal.py
ztfin2p3/calibration/: builder.py  flat.py  starflat.py
ztfin2p3/config/: calibration.tolm
ztfin2p3/pipe/: __init__.py  basepipe.py  biaspipe.py  calibrationpipe.py  flatpipe.py  newpipe.py
ztfin2p3/scripts/: calib.py  catpipe.py  config.yml  detrend2aper.py  parse_cal.py  qa_stats.py  slurm.py  utils.py
ztfin2p3/utils/: tools.py
