[build-system]
requires = ["setuptools>=42", "setuptools_scm[toml]>=3.4"]
build-backend = "setuptools.build_meta"

[project]
name = "ztfin2p3"
authors = [
    {name = "Mickael Rigault", email = "m.rigault@ipnl.in2p3.fr"},
]
description = "IN2P3 pipeline for the ZTF survey"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "astropy",
    "dask",
    "healpy",
    "matplotlib",
    "pandas",
    "pyarrow",
    "rich-click",
    "scipy",
    "tomli",
    "ztfimg>=0.12.0",
    "ztfquery",
]
dynamic = ["version"]

[project.optional-dependencies]
all = ["HMpTy", "htmcatalog", "paramiko", "scp", "scikit-sparse"]

[project.urls]
Repository = "https://github.com/MickaelRigault/ztfin2p3"

[project.scripts]
ztfin2p3 = "ztfin2p3.__main__:cli"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.package-data]
ztfin2p3 = ["config/*"]

[tool.setuptools_scm]
write_to = "ztfin2p3/_version.py"

[tool.pytest.ini_options]
testpaths = ["tests", "docs"]
filterwarnings = [
    # action:message:category:module:lineno
    # "error",
    "ignore:.*Dask DataFrame implementation is deprecated.*:DeprecationWarning",
]
